--- a/css/gravity.css
+++ b/css/gravity.css
@@ -39,17 +39,50 @@ body {
   padding-top: 40px;
   float: right;
   box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.3);
+  position: relative;
+  z-index: 4;
 }
 
 #gravity-command h2 {
   padding-top: 3px;
   margin: 0px;
-  font-size: 18px;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-align: center;
+}
+
+#gravity-command h3 {
+  padding-top: 10px;
+  margin: 0px;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: 500;
-  text-align: center;
+}
+
+#gravity-command p {
+  margin-top: 10px;
+  margin-bottom: 5px;
+  font-weight: 500;
+  font-size: 14px;
 }
 
 #previous-minimap {
   display: none;
+}
+
+#time-stats, #command-stats, #minimap-stats {
+  width: 250px;
+  margin: auto;
+}
+
+#minimap-stats {
+  margin-top: 25px;
+}
+
+#time-stats .value, #command-stats .value {
+  text-align: right;
+}
+#time-stats td, #command-stats td {
+  width: 50%;
 }
